<resources>
    <string name="app_name">Stopwatch and Timer</string>
    <string name="action_settings"> - </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Stopwatch</string>
    <string name="second_fragment_label">Timer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

<!--    <string name="hello_first_fragment">Hello first fragment</string>-->
<!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->

    <string name="reset">reset</string>
    <string name="start">start</string>

    <string name="stopwatch">stopwatch</string>
    <string name="stopwatch_time_00">00:00:00</string>

    <string name="timer">timer</string>
    <string name="minutes">Minutes</string>
    <string name="set">set</string>
    <string name="timer_time_00">00:00:00</string>
    <string name="pause">pause</string>
    <string name="input_init">1</string>
</resources>