<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar"
            android:minHeight="425dp"
            android:minWidth="425dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:progress="75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:id="@+id/text_view_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopwatch_time_00"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/button_start"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_counter"
            android:text="@string/start"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_counter"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.615"/>
    <Button
            android:id="@+id/button_pause"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_counter"
            android:text="@string/pause"
            android:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_counter"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintVertical_bias="0.615"/>
    <Button
            android:id="@+id/button_reset"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_counter"
            android:text="@string/reset"
            android:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.852" app:layout_constraintVertical_bias="0.615"/>
    <Button
            android:id="@+id/button_to_stopwatch"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_counter"
            android:text="@string/stopwatch"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"/>

    <Button
            android:id="@+id/button_to_timer"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_counter"
            android:text="@string/timer"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.853"/>
</androidx.constraintlayout.widget.ConstraintLayout>